--- a/style.css
+++ b/style.css
@@ -52,12 +52,13 @@ nav a {
 nav a:hover{
 background-color: gray;
 }
-main img {width: 500px  }
+main img {
+  width: 500px; float:left;
+ }
+
 #container1 {
-  background-color: #3366cc;
-  min-height: 200px;
-  padding: 20px;
-  border-width: 10px;
-  border-style:inset;
-  border-color: #003399;
-  margin: 20px; float:right;
+
+  background-color: #3366cc; padding:40px;margin-left: 550PX
+
+
+}
